...

            <TextView
                android:id="@+id/profile_name"
                android:layout_width="0dp"
                android:layout_height="25dp"
...

            <TextView
                android:id="@+id/profile_email"
                android:layout_width="0dp"
                android:layout_height="25dp"
...

            <TextView
                android:id="@+id/profile_date_of_birth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/profile_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...
                android:layout_marginLeft="8dp"
                android:layout_marginTop="16dp"
                android:text="Male"
                android:textSize="25dp"
                app:layout_constraintStart_toEndOf="@+id/textView9"
...

            <TextView
                android:id="@+id/profile_gender_preference"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...
                android:layout_marginLeft="8dp"
                android:layout_marginTop="16dp"
                android:text="Female"
                android:textSize="25dp"
                app:layout_constraintStart_toEndOf="@+id/textView11"
...

            <TextView
                android:id="@+id/profile_bio"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
...
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profile_answer1" />


...
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profile_answer2" />


...
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profile_answer3" />


...
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profile_answer4" />

            <TextView
...

            <TextView
                android:id="@+id/profile_answer5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/profile_weight1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/profile_weight2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/profile_weight3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/profile_weight4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/profile_weight5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

            <Button
                android:id="@+id/sign_out_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...
