...
        android:textSize="25dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView31" />

    <Spinner
        android:id="@+id/signUp_spinner1"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"

...
        android:textSize="25dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView32" />

    <Spinner
        android:id="@+id/signUp_spinner2"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toEndOf="@+id/textView33"
...
        android:textSize="25dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView33" />

    <TextView
        android:id="@+id/signUp_date"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:textColor="@color/colorAccent"
        android:textSize="25dp"
        app:layout_constraintStart_toEndOf="@+id/textView34"
        app:layout_constraintTop_toBottomOf="@+id/textView33" />

    <Button
        android:id="@+id/signUp_select_date"
        android:layout_width="98dp"
        android:layout_height="38dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="Pick"
...
        android:layout_marginTop="16dp"
        android:text="Do you like coffee? "
        android:textColor="@color/colorAccent"
        android:textSize="25dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUp_spinner3" />


    <TextView
        android:id="@+id/question3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
        android:layout_marginTop="16dp"
        android:text="Would you like your partner taller than you?"
        android:textColor="@color/colorAccent"
        android:textSize="25dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUp_spinner4" />

    <TextView
        android:id="@+id/question4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
...
        android:layout_marginTop="16dp"
        android:text="Do you like to go for hiking?"
        android:textColor="@color/colorAccent"
        android:textSize="25dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUp_spinner5" />


    <TextView
        android:id="@+id/question5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
        android:layout_marginTop="16dp"
        android:text="Do you love chocolates?"
        android:textColor="@color/colorAccent"
        android:textSize="25dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUp_spinner6" />

    <Spinner
        android:id="@+id/signUp_spinner3"
        android:layout_width="130dp"
        android:layout_height="38dp"
        android:layout_marginStart="16dp"
...
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/question4" />

    <Spinner
        android:id="@+id/signUp_spinner7"
        android:layout_width="130dp"
        android:layout_height="38dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/question5" />

    <Button
        android:id="@+id/signUp_proceed"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_marginTop="24dp"
        android:text="Proceed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.478"
...
        android:textColor="@color/colorAccent"
        android:textSize="25dp"
        app:layout_constraintStart_toEndOf="@+id/signUp_spinner7"
        app:layout_constraintTop_toBottomOf="@+id/question5" />

    <Spinner
        android:id="@+id/signUp_spinner8"
        android:layout_width="130dp"
        android:layout_height="38dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toEndOf="@+id/textView41"
        app:layout_constraintTop_toBottomOf="@+id/question1" />

    <Spinner
        android:id="@+id/signUp_spinner9"
        android:layout_width="130dp"
        android:layout_height="38dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toEndOf="@+id/textView42"
        app:layout_constraintTop_toBottomOf="@+id/question2" />

    <Spinner
        android:id="@+id/signUp_spinner10"
        android:layout_width="130dp"
        android:layout_height="38dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toEndOf="@+id/textView43"
        app:layout_constraintTop_toBottomOf="@+id/question3" />

    <Spinner
        android:id="@+id/signUp_spinner11"
        android:layout_width="130dp"
        android:layout_height="38dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toEndOf="@+id/textView44"
        app:layout_constraintTop_toBottomOf="@+id/question4" />

    <Spinner
        android:id="@+id/signUp_spinner12"
        android:layout_width="130dp"
        android:layout_height="38dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toEndOf="@+id/textView45"
...
